master 0.0.2-SNAPSHOT: - added Europeana import service - added Europeana import frontend - modified database: Video table InnoDB, 1024 char URL, sourceURL unique index - fix: set JPA to use JTA (why else would we struggle to install Bitronix in Tomcat) - fix: added /static resource dir

--- a/src/main/webapp/static/styles/css/forms.css
+++ b/src/main/webapp/static/styles/css/forms.css
@@ -940,3 +940,9 @@ legend + .control-group {
 .form-horizontal.boxed .error-block {
   margin-left: 100px;
 }
+
+.errors {
+ color: red;
+ display: block;
+ font-weight: bold;
+}
