--- a/src/main/webapp/static/styles/css/utilities.css
+++ b/src/main/webapp/static/styles/css/utilities.css
@@ -149,3 +149,40 @@ img.bordered {
 .compact {
   line-height: 1.0em;
 }
+
+.admin-body {
+    margin: 50px;
+}
+
+.admin-width-100pct {
+    width: 100%;
+}
+
+.admin-width-600px {
+    width: 600px;
+}
+
+.admin-label-200px {
+    display: inline-block;
+    width: 200px;
+}
+
+.admin-value-300px {
+    display: inline;
+    width: 300px;
+}
+
+.admin-input-300px {
+    width: 300px;
+}
+
+.admin-notify-600px {
+    color: red;
+    font-weight: bold;
+    width: 600px;
+}
+
+.admin-log {
+    font-family: Courier;
+}
+
