--- a/src/main/webapp/static/styles/css/utilities.css
+++ b/src/main/webapp/static/styles/css/utilities.css
@@ -1,3 +1,15 @@
+.width-350 {
+    margin-bottom: 8px;
+    margin-top: 8px;
+    width: 350px;
+}
+.small {
+    font-size: 0.9em;
+    line-height: 1em;
+}
+.bold {
+    font-weight: bold;
+}
 .pull-right {
   float: right;
 }
