--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="manbijthond">
+    <wb-module deploy-name="waisda">
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
-        <property name="java-output-path" value="/manbijthond/target/classes"/>
-        <property name="context-root" value="manbijthond-web"/>
+        <property name="java-output-path" value="/waisda/target/classes"/>
+        <property name="context-root" value="waisda-web"/>
     </wb-module>
 </project-modules>
