--- a/src/main/webapp/static/styles/css/components.css
+++ b/src/main/webapp/static/styles/css/components.css
@@ -27,7 +27,6 @@ html {
   padding: 2px 0 4px 0;
   background-color: #000000;
   *zoom: 1;
-  *zoom: 1;
 }
 .brand-marker p {
   line-height: 30px;
@@ -59,7 +58,6 @@ header.site-header {
   background-color: #eeeeee;
   margin: 0 0 18px 0;
   padding: 10px 0;
-  *zoom: 1;
   *zoom: 1;
 }
 header.site-header .stats {
@@ -120,12 +118,6 @@ section.main {
   -ms-box-sizing: border-box;
   box-sizing: border-box;
   *behavior: url(/static/script/boxsizing.htc);
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
-  *behavior: url(/static/script/boxsizing.htc);
-  *zoom: 1;
   *zoom: 1;
 }
 .box:hover {
@@ -135,7 +127,6 @@ section.main {
   color: #666666;
   padding: 8px 9px 10px 9px;
   border-bottom: 1px solid #eeeeee;
-  *zoom: 1;
   *zoom: 1;
 }
 .box header.extended * {
@@ -148,9 +139,6 @@ section.main {
   display: block;
   margin-top: auto;
   margin-bottom: auto;
-  display: block;
-  margin-top: auto;
-  margin-bottom: auto;
 }
 .box header.extended .small strong {
   display: block;
@@ -159,7 +147,6 @@ section.main {
   background-color: #eeeeee;
 }
 .box header.highlight {
-  background-color: rgba(255, 102, 0, 0.25);
   background-color: rgba(255, 102, 0, 0.25);
 }
 .box header .board {
@@ -202,12 +189,6 @@ section.main {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  -webkit-box-shadow: 3px 3px 5px #888888;
-  -moz-box-shadow: 3px 3px 5px #888888;
-  box-shadow: 3px 3px 5px #888888;
   -webkit-box-shadow: 3px 3px 5px #888888;
   -moz-box-shadow: 3px 3px 5px #888888;
   box-shadow: 3px 3px 5px #888888;
@@ -311,9 +292,6 @@ section.main {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
 .order {
   margin-top: 18px;
@@ -323,9 +301,6 @@ section.main {
 .order .index {
   border: 3px solid #eeeeee;
   background-color: #999999;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  border-radius: 20px;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   border-radius: 20px;
@@ -371,7 +346,7 @@ section.main {
 .chart-entry img {
   margin-right: 10px;
 }
-.chart-entry  + .chart-entry {
+.chart-entry + .chart-entry {
   border-top: 1px solid #eeeeee;
 }
 .chart-entry.extended {
@@ -390,13 +365,12 @@ section.main {
   line-height: 30px;
   font-weight: bold;
 }
-.horizontal .chart-entry  + .chart-entry {
+.horizontal .chart-entry + .chart-entry {
   border-top: none;
 }
 .tagcloud {
   padding: 0;
   margin: 9px 0;
-  *zoom: 1;
   *zoom: 1;
 }
 .tagcloud:before,
@@ -445,11 +419,6 @@ section.main {
   -ms-box-sizing: border-box;
   box-sizing: border-box;
   *behavior: url(/static/script/boxsizing.htc);
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
-  *behavior: url(/static/script/boxsizing.htc);
 }
 .compact-overlay {
   position: absolute;
@@ -457,8 +426,6 @@ section.main {
   left: 0;
   height: 45px;
   background-color: #ffffff;
-  opacity: 0.5;
-  filter: alpha(opacity=50);
   opacity: 0.5;
   filter: alpha(opacity=50);
 }
@@ -478,9 +445,18 @@ section.main {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+}
+.pauze {
+  color: #ffffff;
+  padding: 11px 11px 12px 48px;
+  font-size: 15px;
+  text-transform: uppercase;
+  font-weight: bold;
+  background: #000000 url('/static/img/icon-pause.png') 12px 8px no-repeat;
+  cursor: pointer;
+}
+.pauze.play {
+  background: #000000 url('/static/img/icon-play.png') 12px 8px no-repeat;
 }
 .timer-intro small {
   display: block;
@@ -523,9 +499,6 @@ section.main {
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   border-radius: 2px;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  border-radius: 2px;
 }
 .tooltip {
   position: absolute;
@@ -533,16 +506,9 @@ section.main {
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   border-radius: 2px;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  border-radius: 2px;
   color: #ffffff;
   border: 1px solid #333333;
   background-color: rgba(51, 51, 51, 0.9);
-  background-color: rgba(51, 51, 51, 0.9);
-  -webkit-box-shadow: 0px 0px 5px #cccccc;
-  -moz-box-shadow: 0px 0px 5px #cccccc;
-  box-shadow: 0px 0px 5px #cccccc;
   -webkit-box-shadow: 0px 0px 5px #cccccc;
   -moz-box-shadow: 0px 0px 5px #cccccc;
   box-shadow: 0px 0px 5px #cccccc;
@@ -568,11 +534,7 @@ section.main {
   cursor: pointer;
 }
 .game-queue table h4 {
-  white-space: nowrap;
   line-height: 24px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -590,14 +552,8 @@ section.main {
   -webkit-box-shadow: 0px 0px 5px #999999;
   -moz-box-shadow: 0px 0px 5px #999999;
   box-shadow: 0px 0px 5px #999999;
-  -webkit-box-shadow: 0px 0px 5px #999999;
-  -moz-box-shadow: 0px 0px 5px #999999;
-  box-shadow: 0px 0px 5px #999999;
 }
 .game-queue.dynamic.attention {
-  -webkit-box-shadow: 0px 0px 5px #ff6600;
-  -moz-box-shadow: 0px 0px 5px #ff6600;
-  box-shadow: 0px 0px 5px #ff6600;
   -webkit-box-shadow: 0px 0px 5px #ff6600;
   -moz-box-shadow: 0px 0px 5px #ff6600;
   box-shadow: 0px 0px 5px #ff6600;
