--- a/src/main/webapp/static/styles/less/components.less
+++ b/src/main/webapp/static/styles/less/components.less
@@ -380,6 +380,19 @@ section.main {
 	object { .center-block(); }
 }
 
+.pauze {
+	color: #ffffff;
+	padding: 11px 11px 12px 48px;
+	font-size: 15px;
+	text-transform: uppercase;
+	font-weight: bold;
+	background: #000000 url('/static/img/icon-pause.png') 12px 8px no-repeat;
+	cursor: pointer;
+	&.play {
+		background: #000000 url('/static/img/icon-play.png') 12px 8px no-repeat;
+	}
+}
+
 .timer-intro {
 	small {
 		display:block;
