Tijden staan nu netjes op de video (homepage)

--- a/src/main/webapp/static/styles/less/components.less
+++ b/src/main/webapp/static/styles/less/components.less
@@ -226,6 +226,11 @@ section.main {
 				margin:-25px 0 0 -25px;
 				background:transparent url(/static/img/play-button-overlay.png) 0 0 no-repeat;
 			}
+			&.duration {
+				color: #fff;
+				right: 4px;
+				bottom: 0px;
+			}
 		}
 	}
 	h3 {
