--- a/src/main/webapp/static/styles/css/components.css
+++ b/src/main/webapp/static/styles/css/components.css
@@ -287,6 +287,11 @@ section.main {
   margin: -25px 0 0 -25px;
   background: transparent url(/static/img/play-button-overlay.png) 0 0 no-repeat;
 }
+.channel .img .overlay.duration {
+  color: #fff;
+  right: 4px;
+  bottom: 0px;
+}
 .channel h3 {
   line-height: 24px;
   overflow: hidden;
