--- a/src/main/webapp/static/styles/css/components.css
+++ b/src/main/webapp/static/styles/css/components.css
@@ -495,6 +495,9 @@ section.main {
   clear: both;
   display: block;
 }
+.notMatchingWithOtherPlayer {
+  opacity: 0.3;
+}
 .help {
   font-size: 12px;
   line-height: 16px;
