--- a/src/main/webapp/static/styles/css/components.css
+++ b/src/main/webapp/static/styles/css/components.css
@@ -572,3 +572,54 @@ section.main {
 .stack + .stack {
   margin-top: 18px;
 }
+.glasspane {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 999;
+}
+.glasspane.hidden {
+  display: none;
+}
+.glasspane .lightbox {
+  height: 262px;
+  width: 622px;
+  margin: 210px auto;
+  background-color: #fff;
+  padding: 50px 75px;
+  position: relative;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+}
+.glasspane .lightbox .close-icon {
+  width: 30px;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  height: 30px;
+  background: transparent url('/static/img/icon-close.png') 0px 0px no-repeat;
+}
+.glasspane .lightbox h2 {
+  font-size: 31px;
+  color: #000000;
+  margin-bottom: 43px;
+}
+.glasspane .lightbox .close-link {
+  text-decoration: underline;
+  margin-top: 25px;
+  cursor: pointer;
+}
+.glasspane .lightbox .uil {
+  background: transparent url('/static/img/uil.png') 0px 0px no-repeat;
+  width: 62px;
+  height: 174px;
+  position: absolute;
+  top: -128px;
+  left: 86px;
+}
