--- a/src/main/webapp/static/styles/less/components.less
+++ b/src/main/webapp/static/styles/less/components.less
@@ -515,3 +515,55 @@ section.main {
 .stack + .stack { 
 	margin-top:@baseLineHeight;	
 }
+
+// ------- GLASSPANE
+.glasspane {
+	&.hidden {
+		display: none;
+	}
+	position: fixed;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    top: 0;
+    left: 0;
+    background-color: rgba(0,0,0,0.8);
+    z-index: 999;
+    .lightbox {
+    	height: 262px;
+		width: 622px;
+		margin: 210px auto;
+		background-color: #fff;
+		padding: 50px 75px;
+		position: relative;
+		.border-radius(10px);
+		.close-icon {
+			width: 30px;
+			position: absolute;
+			top: 8px;
+			right: 8px;
+			height: 30px;
+			background: transparent url('/static/img/icon-close.png') 0px 0px no-repeat;
+		}
+		h2 {
+			font-size: 31px;
+			color: @black;
+			margin-bottom: 43px;
+		}
+		h3 {}
+		.close-link {
+			text-decoration: underline;
+			margin-top: 25px;
+			cursor: pointer;
+		}
+		.uil {
+			background: transparent url('/static/img/uil.png') 0px 0px no-repeat;
+			width: 62px;
+			height: 174px;
+			position: absolute;
+			top: -128px;
+			left: 86px;
+		}
+    }
+}
