--- a/src/main/webapp/static/styles/css/type.css
+++ b/src/main/webapp/static/styles/css/type.css
@@ -25,7 +25,7 @@ a.unstyled {
 .small {
   font-size: 11px;
   margin-bottom: 0;
-  color: #999999;
+  color: #fff;
 }
 .mark {
   background-color: #eeeeee;
